--- a/Grocery/templates/base.html
+++ b/Grocery/templates/base.html
@@ -6,13 +6,89 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+      <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
       <title>
           {%block title%}
 
           {%endblock%}
         </title>
+        <style>
+            .abc {
+            margin-top:18px;
+            margin-bottom: 0px;
+            background-color:lawngreen;
+            }
+
+            
+* {
+  box-sizing: border-box;
+}
+
+.columns {
+  float: left;
+  width: 33.3%;
+  padding: 8px;
+}
+
+.price {
+  list-style-type: none;
+  border: 1px solid #eee;
+  margin: 0;
+  padding: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.price:hover {
+  box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
+}
+
+.price .header {
+  background-color: #111;
+  color: white;
+  font-size: 25px;
+}
+
+.price li {
+  border-bottom: 1px solid #eee;
+  padding: 20px;
+  text-align: center;
+}
+
+.price .grey {
+  background-color: #eee;
+  font-size: 20px;
+}
+
+.button {
+  background-color: #04AA6D;
+  border: none;
+  color: white;
+  padding: 10px 25px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+@media only screen and (max-width: 600px) {
+  .columns {
+    width: 100%;
+  }
+}
+
+.center {
+  margin: auto;
+  width: 60%;
+  border: 3px ;
+  padding: 10px;
+}
+</style>
+            
+        
    </head>
    <body>
+
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="#">GS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
@@ -27,21 +103,33 @@
                     <a class="nav-link" href="{{url_for('market_page')}}">Market</a>
                 
                 </li>
+			
             </ul>
 
             {% if current_user.is_authenticated%}
+            
+            
             <ul class="navbar-nav">
 
                 <li class="nav-item">
+                  
+                    <a class="nav-link" href="{{url_for('set_budget')}}">Set Budget</a>
+                </li>
+
+                <li class="nav-item" >
                     <a class="nav-link" style="color:lawngreen; font-weight:bold" >
+                          
                         <i class="fas fa-coins"></i>
+                       
                         {{ current_user.prettier_budget }}
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">WELCOME, {{ current_user.username }}</a>
+                   
+                    <a class="nav-link"  href="#">WELCOME, {{ current_user.username }}</a>
                 </li>
                 <li class="nav-item">
+                  
                     <a class="nav-link" href="{{url_for('logout_page')}}">Logout</a>
                 </li>
                
@@ -94,8 +182,12 @@
    </body>
    <style>
       body {
-      background-color: #212121;
+      background-color: rgb(10,52,80);
       color: white
       }
    </style>
+
+   {% block new %}
+   {%endblock%}
+
 </html>
