--- a/Grocery/templates/includes/items_modals.html
+++ b/Grocery/templates/includes/items_modals.html
@@ -52,10 +52,12 @@
           
           <form  method="POST">
             {{ form.hidden_tag() }}
-            <h4 class="text-center">Are you sure you want to buy {{ item.name }} for {{ item.price }} Rs.?</h4>
+            <h4 class="text-center">Are you sure you want to add {{ item.name }} for {{ item.price }} Rs. to the cart?</h4>
             
 
             <input type="hidden" id="purchased_item" name="purchased_item" value= "{{ item.name }}"}>
+            <input type="hidden" id="item_price" name="item_price" value= "{{ item.price }}"}>
+            <input type="hidden" id="item_id" name="item_id" value= "{{ item.id }}"}>
               {{ form.submit(class="btn btn-outline-success btn-block") }}
 
           </form>
